# EnvAndFoundationWorkshop

./: --open.json  .dockerignore  .gitignore  Dockerfile  Makefile  OPS-NOTES.md  README.md  apicache-cli-av.code-workspace  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker.yml  pip-audit.yml  publish.yml
src/apicache/: __init__.py  api.py  cache.py  cli.py  py.typed
src/apicache/utils/: json_utils.py
src/apicache_cli_av/: cache.py
tests/: test_cli.py
